chore: Fixed constructor argument.